--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -36,3 +36,26 @@
     transform: rotate(360deg);
   }
 }
+
+.page {
+  position: absolute !important;
+}
+.page-enter {
+  opacity: 0;
+}
+
+.page-enter-active {
+  opacity: 1;
+  transition: all 600ms linear;
+}
+
+.page-exit {
+  position: absolute;
+  opacity: 1;
+}
+
+.page-exit-active {
+  position: absolute !important; 
+  opacity: 0;
+  transition: all 600ms linear;
+}
